# funjit

./: Cargo.toml  README.md  build.rs  test.bf
examples/: hello.bf  loop.bf
src/: eval.rs  jit.rs  main.rs  space.rs
tests/: add_two.bf  control_flow.bf  div.bf  hello.bf  input_char.bf  input_char.bf.output  pop.bf  subtract.bf  swap.bf
