[package]
name = "funjit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rand" = "0.8.*"
"clap" = "2.33.*"
"anyhow" = "1.0.45"
"dynasm" = "1.1.*"
"dynasmrt" = "1.1.*"

[dev-dependencies]
colored-diff = "0.2.*"

[build-dependencies]
anyhow = "1.0.45"
